--- a/IconicYatraUI-main/package.json
+++ b/IconicYatraUI-main/package.json
@@ -20,7 +20,9 @@
     "@reduxjs/toolkit": "^2.9.0",
     "axios": "^1.12.2",
     "bootstrap": "^5.3.7",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "dotenv": "^17.2.2",
     "react": "^19.1.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
