--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "multer": "^2.0.1",
     "nodemailer": "^7.0.4",
     "nodemon": "^3.1.10",
+    "razorpay": "^2.9.6",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^11.1.0"
